tests/errors/string_assignment_01.f90
program string_assignment_01
    implicit none
    character(:), allocatable :: a
    character(:), allocatable :: b
    a = b
end program string_assignment_01